--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -160,6 +160,7 @@ nav {
 
             ul {
                 display: flex;
+                justify-content: flex-end; /* Adjust to your layout needs */
             }
 
             li {
@@ -174,6 +175,16 @@ nav {
         nav {
             width: 100%;
             background-color: #FFFFFF;
+            display: block;
+        }
+        ul {
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Center the items */
+        }
+
+        li {
+            padding: 10px 0; /* Adjust spacing */
         }
     }
 
@@ -182,15 +193,21 @@ nav {
         nav {
             width: 100%;
             background-color: #FFFFFF;
+            display: block;
         }
 
         ul {
-            display: none;
+            display: flex;
             flex-direction: column;
+            align-items: center; /* Center the items */
         }
 
         .menu-btn {
             display: block;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 3; /* Ensure the button is above the navigation */
         }
 
         .menu-icon {
