--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,26 +38,194 @@ body {
 
 // Navigation styling
 nav {
-    box-shadow: none;
-    font-size: 1.2em;
-    position: absolute;
-    right: 0;
-    left: 20px;
-    top: 10vh;
-    height: auto;
-    width: 250px;
-    display: none;
-    z-index: 1;
-
-    a {
+        box-shadow:none;
+        font-size: 1.2em;
+        position: absolute;
+        right: 0;
+        left: 20px;
+        top: 10vh;
+        height: auto;
+        width: 250px;
+        display: none;
+        z-index: 1;
+        
+    }
+    a{
         font-size: 0.7em;
         margin-left: 20px;
         text-decoration: none;
         color: #242323;
         font-weight: bold;
     }
+    
+     ul {
+        width: 100%;
+        list-style-type: none;
+        text-align: justify;
+        margin: 20px auto;
+        padding: 0;
+     
+    }
+     li{
+        font-size: 1.5rem;
+        padding: 10px 30px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: justify;
+        
+    
+    }
+     ul li {
+        display: flex;
+        margin-right: 100px;
+    }
+    
+    
+    .menu-btn.close {
+        position: absolute;
+        top: 10px; /* Adjust the top value as needed */
+        right: 10px; /* Adjust the right value as needed */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 8px;
+        background-color: #E5C643;
+        border: 2px solid #2C363F;
+        border-radius: 5px;
+        cursor: pointer;
+        z-index: 2; /* Ensure the close button is above other elements */
+    }
+    
+    
+    .menu-btn:hover {
+        background-color: #F2F5EA;
+        box-shadow: 0 0px 5px rgba(0, 0, 0, 0.421);
+    }
+    
+    .menu-btn {
+        display: flex;
+        align-items: center;
+        padding: 8px;
+        background-color: #E5C643;
+        border: rgb(0, 0, 0) solid 2px;
+        cursor: pointer;
+        border-radius: 5px; /* Add rounded corners */
+         height: 10vh;
+    }
+    
+    .menu-icon {
+        margin-right: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Center the bars */
+    }
+    
+    .bars {
+        display: block;
+        width: 80px;
+        height: 3px;
+        background-color: #2C363F;
+        margin: 5px 0;
+        border-radius: 3px; /* Add rounded corners */
+    }
+    
+    
+    
+    .c1, .c2 {
+        width: 30px;
+        position: relative;
+        top: 0;
+    }
+    .menu-btn,
+    .bars {
+        transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
 
-    ul {
+    /* styles for larger screens  */
+@media only screen and (min-width: 1025px) {
+
+   .menu-btn {
+       display: none;
+   }
+
+   #open-menu {
+       display: none !important;
+   }
+   #close-menu{
+       display: none !important
+   }
+
+   nav {
+       display: block !important;
+       position: static;
+       box-shadow: 0 0px 0px;
+       right: 0;
+       top: 0;
+       height: auto;
+       font-size: 1.4em;
+       width: auto;
+   }
+
+   ul {
+       display: flex;
+   }
+    li {
+       display: inline;
+       padding: 1.2em 0;
+   }
+}
+
+        // Media query for max-width: 1024px
+        @media screen and (max-width: 1024px) {
+            nav {
+                position: fixed;
+                top: 0;
+                right: 0;
+                height: 70vh;
+                width: 300px;
+                background-color: #FFFFFF;
+                display: none;
+                z-index: 1;
+            }
+        
+             ul {
+                width: 100%;
+                list-style-type: none;
+                text-align: justify;
+                margin: 20px auto;
+                padding: 0;
+            }
+        
+            li {
+                font-size: 1.5rem;
+                padding: 10px 30px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                text-align: justify;
+            }
+            .menu-btn {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+            }
+        }
+
+        // Media query for max-width: 768px
+        @media screen and (max-width: 768px) {
+           nav {
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 70vh;
+        width: 300px;
+        background-color: #FFFFFF;
+        display: none;
+        z-index: 1;
+    }
+
+    nav ul {
         width: 100%;
         list-style-type: none;
         text-align: justify;
@@ -65,7 +233,7 @@ nav {
         padding: 0;
     }
 
-    li {
+    nav li {
         font-size: 1.5rem;
         padding: 10px 30px;
         border: none;
@@ -73,149 +241,11 @@ nav {
         cursor: pointer;
         text-align: justify;
     }
-
-    ul li {
-        display: flex;
-        margin-right: 100px;
-    }
-
-    .menu-btn.close {
+    .menu-btn {
         position: absolute;
         top: 10px;
         right: 10px;
     }
-
-    .menu-btn:hover {
-        background-color: #F2F5EA;
-        box-shadow: 0 0px 5px rgba(0, 0, 0, 0.421);
-    }
-
-    .menu-btn {
-        display: none;
-        position: fixed;
-        top: 10px;
-        right: 10px;
-        background-color: #E5C643;
-        border: 2px solid #2C363F;
-        border-radius: 5px;
-        cursor: pointer;
-        z-index: 2;
-        height: 10vh;
-    }
-
-    .menu-icon {
-        margin-right: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .bars {
-        display: block;
-        width: 30px;
-        height: 3px;
-        background-color: #2C363F;
-        margin: 5px 0;
-        border-radius: 3px;
-    }
-
-    .c1, .c2 {
-        width: 30px;
-        position: relative;
-        top: 0;
-    }
-
-    .menu-btn,
-    .bars {
-        transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    // Styles for larger screens
-    @media only screen and (min-width: 1025px) {
-        .menu-btn {
-            display: none;
         }
+    
 
-        #open-menu {
-            display: none !important;
-        }
-
-        #close-menu {
-            display: none !important;
-        }
-
-        header {
-            position: static;
-        }
-
-        nav {
-            display: block !important;
-            position: static;
-            box-shadow: 0 0px 0px;
-            right: 0;
-            top: 0;
-            height: auto;
-            font-size: 1.4em;
-            width: auto;
-
-            ul {
-                display: flex;
-                justify-content: flex-end; /* Adjust to your layout needs */
-            }
-
-            li {
-                display: inline;
-                padding: 1.2em 0;
-            }
-        }
-    }
-
-    // Media query for max-width: 1024px (tablet screens)
-    @media screen and (max-width: 1024px) {
-        nav {
-            width: 100%;
-            background-color: #FFFFFF;
-            display: block;
-        }
-        ul {
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* Center the items */
-        }
-
-        li {
-            padding: 10px 0; /* Adjust spacing */
-        }
-    }
-
-    // Media query for max-width: 768px (mobile screens)
-    @media screen and (max-width: 768px) {
-        nav {
-            width: 100%;
-            background-color: #FFFFFF;
-            display: block;
-        }
-
-        ul {
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* Center the items */
-        }
-
-        .menu-btn {
-            display: block;
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            z-index: 3; /* Ensure the button is above the navigation */
-        }
-
-        .menu-icon {
-            display: flex;
-        }
-
-        .bars {
-            display: block;
-        }
-    }
-}
