--- a/src/scss/partials/footer.scss
+++ b/src/scss/partials/footer.scss
@@ -1,7 +1,17 @@
-// Footer styling
+// Partiell för footer
 footer {
+    background-color: $primary-color;
+    color: #fff;
     text-align: center;
     padding: 10px;
-    background-color: $primary-color;
-    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    
+    // @if/@else används här för att anpassa stilen beroende på bakgrundsfärg
+    @if $primary-color == #3498db {
+        border-top: 2px solid darken($primary-color, 10%);
+    } @else {
+        border-top: 2px solid lighten($primary-color, 10%);
+    }
 }
