--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,7 +49,7 @@ nav {
         display: none;
         z-index: 1;
         
-    }
+    
     a{
         font-size: 0.7em;
         margin-left: 20px;
@@ -141,20 +141,11 @@ nav {
     .bars {
         transition: background-color 0.3s ease, box-shadow 0.3s ease;
     }
+}
 
     /* styles for larger screens  */
 @media only screen and (min-width: 1025px) {
 
-   .menu-btn {
-       display: none;
-   }
-
-   #open-menu {
-       display: none !important;
-   }
-   #close-menu{
-       display: none !important
-   }
 
    nav {
        display: block !important;
@@ -165,7 +156,7 @@ nav {
        height: auto;
        font-size: 1.4em;
        width: auto;
-   }
+   
 
    ul {
        display: flex;
@@ -174,6 +165,16 @@ nav {
        display: inline;
        padding: 1.2em 0;
    }
+   .menu-btn {
+    display: none;
+}
+
+#open-menu {
+    display: none !important;
+}
+#close-menu{
+    display: none !important
+}
 }
 
         // Media query for max-width: 1024px
@@ -187,7 +188,7 @@ nav {
                 background-color: #FFFFFF;
                 display: none;
                 z-index: 1;
-            }
+            
         
              ul {
                 width: 100%;
@@ -211,6 +212,7 @@ nav {
                 right: 10px;
             }
         }
+    }
 
         // Media query for max-width: 768px
         @media screen and (max-width: 768px) {
@@ -223,9 +225,9 @@ nav {
         background-color: #FFFFFF;
         display: none;
         z-index: 1;
-    }
+    
 
-    nav ul {
+ ul {
         width: 100%;
         list-style-type: none;
         text-align: justify;
@@ -233,7 +235,7 @@ nav {
         padding: 0;
     }
 
-    nav li {
+     li {
         font-size: 1.5rem;
         padding: 10px 30px;
         border: none;
@@ -246,6 +248,6 @@ nav {
         top: 10px;
         right: 10px;
     }
+}
         }
-    
-
+    }
