--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -1,9 +1,14 @@
-// Color variables
+// variable.scss
 $primary-color: #3498db;
-$secondary-color: #2ecc71;
-$background-color: #ecf0f1;
-$text-color: #2c3e50;
+$background-color: #ffffff;
+$text-color: #333333;
+// Using darken and lighten functions
+$dark-primary-color: darken($primary-color, 10%);
+$light-primary-color: lighten($primary-color, 10%);
+$dark-background-color: #121212;
 
-// Dark mode color variables
-$dark-background-color: #2c3e50;
-$dark-text-color: #ecf0f1;
+// Additional color functions (optional)
+$complement-color: complement($primary-color);
+$grayscale-color: grayscale($primary-color);
+$invert-color: invert($primary-color);
+$adjust-hue-color: adjust-hue($primary-color, 45deg);
