--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -2,13 +2,12 @@
 $primary-color: #3498db;
 $background-color: #ffffff;
 $text-color: #333333;
-// Using darken and lighten functions
-$dark-primary-color: darken($primary-color, 10%);
-$light-primary-color: lighten($primary-color, 10%);
-$dark-background-color: #121212;
+// Define light theme
+$light-background-color: #ffffff;
+$light-text-color: #333333;
+$light-primary-color: #3498db;
 
-// Additional color functions (optional)
-$complement-color: complement($primary-color);
-$grayscale-color: grayscale($primary-color);
-$invert-color: invert($primary-color);
-$adjust-hue-color: adjust-hue($primary-color, 45deg);
+// Define dark theme
+$dark-background-color: #0e0437;
+$dark-text-color: #ffffff;
+$dark-primary-color: #3498db;
