--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@ body {
     color: $text-color;
     height: auto;
     width: 100%;
+    overflow-x: hidden;
 
 
     // Responsive font size
@@ -38,7 +39,6 @@ body {
 @media screen and (max-width:1024px) and (min-width:768px){
     // Add specific styles for smaller screens or narrow viewports
     .content {
-        padding: 10px; // Adjust padding for smaller screens
         max-width: 50ch;
     }
 }
