--- a/src/scss/partials/header.scss
+++ b/src/scss/partials/header.scss
@@ -2,6 +2,8 @@
 header {
     background-color: $primary-color;
     padding: 30px;
+    display: flex;
+    width: 100%;
 
     h1 {
         color: #fff;
